# dRoute

./: .gitignore  NOTICE  README.md  pyproject.toml  setup.py
docs/: lake_routing_design.md
experiments/: README.md  _coupled_eval.py  _sv_enzyme_gradcheck.py  bow_at_banff_dds_vs_adam.py  bow_at_calgary_lakes.py  bow_calgary_joint_calibration_memo.md  calgary_droute_pipeline.py  calgary_final_figures.py  calgary_gauge_eval.py  calgary_multigauge_droute.py  calgary_multigauge_reservoir_calib.py  coupled_e2e_dds_calib.py  coupled_e2e_protect.py  coupled_routing_dds_calib.py  gradient_verification.py  iceland_multigauge.py  idealized_chain.py  method_catalogue.py  plot_calgary_map.py  regenerate_figs.py  reservoir_dds_validate.py  reservoir_rules_adam.py  routing_multigauge_adam.py  routing_sv_manning_calib.py
include/dmc/: kernels_enzyme.hpp  network.hpp  parallel_routing.hpp  router.hpp  saint_venant_enzyme.hpp  saint_venant_router.hpp
paper/: gmd_manuscript.md  paper.bib  paper.md
python/: bindings.cpp
python/droute/: __init__.py  _version.py  build_instructions.py  config.py  extractor.py  lake_preprocessor.py  mixins.py  network_adapter.py  postprocessor.py  preprocessor.py  runner.py  topology_generator.py
python/droute/calibration/: __init__.py  bounds.py  droute_regionalization.py  optimizer.py  parameter_manager.py  worker.py
tests/python/: test_import.py  test_network_adapter.py  test_optimizer.py  test_parameter_manager.py  test_postprocessor.py
