[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.15", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "droute"
dynamic = ["version"]
description = "Differentiable river routing library for hydrological modeling"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Darri Eythorsson", email = "darri.eythorsson@ucalgary.ca"}
]
keywords = ["hydrology", "routing", "muskingum-cunge", "differentiable", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0"]
symfluence = ["symfluence>=0.7.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.entry-points."symfluence.plugins"]
droute = "droute:register"

[project.urls]
Homepage = "https://github.com/DarriEy/dRoute"
Documentation = "https://github.com/DarriEy/dRoute#readme"
Repository = "https://github.com/DarriEy/dRoute"
"Bug Tracker" = "https://github.com/DarriEy/dRoute/issues"
"Source Code" = "https://github.com/DarriEy/dRoute"

# Don't look for Python packages - this is a pure C++ extension built by setup.py
[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
package-dir = {"" = "python"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.dynamic]
version = {attr = "droute._version.__version__"}

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_data: marks tests that require sample data files",
    "enzyme: marks tests that require Enzyme AD support",
]
